--- a/css/style.css
+++ b/css/style.css
@@ -1,59 +1,136 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit&family=Noto+Sans+Thai&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+/* //////////////////////////////    Header    ////////////////////////// */
+.navbar-nav .nav-link.active, .navbar-nav .nav-link.show
+{
+  color: #ffffff;
+  }
+  
+.container-fluid{
+    background-color: rgb(0, 0, 0);
+    margin-left:20%
+}
+.navbar{
 
-.content{
-    color: darkblue;
+ padding-top: 0;
+ 
+}
+.container-fluid{
+    padding-left:20% ;
+  }
+.navbar.navbar.navbar.navbar.navbar
+{
+  --bs-navbar-padding-x: 0;
+  --bs-navbar-padding-y: 0rem;}
+.navbar-brand .img{
+    position: relative;
+    width: 5px;
+  }
+  .dow{
+    width: 50px;
+    position: relative;
+    left: 2rem;
+  }
+  .drop{
+    bottom: 0.1rem;
+    color: #ffffff;
+    position: relative;
+    right:  1rem;
+  }
+  .nav-item{
+    position: relative;
+    right:-3rem;
+  }
+/* //////////////////////////////    Header    ////////////////////////// */
+
+
+
+
+
+/* //////////////////////////////    Sec    ////////////////////////// */
+
+.span{
+       
+       margin-right: 15px;
+}
+li{
+  display: inline;
+  margin-right: 0.5rem;
+  
 }
 
-body{
-    font-family: 'Kanit', sans-serif;
-    font-family: 'Noto Sans Thai', sans-serif;
-}
 
-.navbar-brand{
-    color: gray;
+.ul{
+  display: flex;
+  
+ 
+  padding-left: 1.5rem;
+  font-size: 16px;
+  white-space: nowrap;
 }
-.bg-body-tertiary {
-    background-color: white !important
+.span{
+  color: red;
 }
-.mybtn{
-    background-color: blue;
-    color: aliceblue;
+.Vacc{
+  position: relative;
+  right: 1.4rem;
 }
-.portfolio{
-    background-color: rgb(157, 227, 255);
+.con{
+  position: relative;
+  right: 1%;
 }
-.bi-pc-display-horizontal,.bi-file-earmark-text-fill,.bi-cup-fill{
-    color: cornflowerblue;
-    font-size: 80px;
+.line{
+  position: relative;
+  right: 1.7rem;
+  opacity: 0.5;
+  
 }
-.topic{
-    font-weight: bold;
+.Jeff{
+  position: relative;
+  right: 3.4rem;
 }
-.bluetopic{
-    color: rgb(173, 199, 247);
+.COVID-19T{
+  position: relative;
+  right: 2rem;
 }
-.figure-container {
-    display: flex;
-    gap: 20px;
+/* //////////////////////////////    Sec    ////////////////////////// */
+
+
+
+ /* ////////////////////////   Body  ////////////////////////////  */
+
+h4{
+  text-align: left;
+  padding-bottom:0.4rem ;
+  border-bottom: 1px solid rgb(212, 205, 205);
 }
-.footer{
-    background-color: rgb(238, 135, 212);
-    color: aliceblue;
+h6{
+  text-align: left;
+  padding-bottom:0.6rem ;
+  border-bottom: 1px solid rgb(212, 205, 205);
 }
-.bi-house-fill{
-    color: white;
-    font-size: 80px;
+.Live{
+  color: #b31010;
 }
-.bi-instagram , .bi-twitter , .bi-facebook , .bi-globe{
-    color: white;
-    font-size: 20px;
+.Jan{
+  text-align: left;
+  
 }
-.port{
-    color: aliceblue;
-    font-size: 60px;
-}
-.head1{
-    border-bottom: 2px solid rgb(15, 76, 117);
-    padding-bottom: 50px;
-}
+.li{
+
+  text-align: left;
+  display: list-item;
+  text-decoration: underline;
+  color: #3c3c3c;
+   }
+   @media (max-width: 989px) {
+    h4 {
+      display: none; 
+    }
+
+    img.img-fluidf {
+      content: url('IMG6.png'); 
+    }
+  }
+  img.img-fluidf{
+    width: 80%;
+  }
