--- a/css/style.css
+++ b/css/style.css
@@ -1,136 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit&family=Noto+Sans+Thai&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
-/* //////////////////////////////    Header    ////////////////////////// */
-.navbar-nav .nav-link.active, .navbar-nav .nav-link.show
-{
-  color: #ffffff;
-  }
-  
-.container-fluid{
-    background-color: rgb(0, 0, 0);
-    margin-left:20%
-}
-.navbar{
 
- padding-top: 0;
- 
-}
-.container-fluid{
-    padding-left:20% ;
-  }
-.navbar.navbar.navbar.navbar.navbar
-{
-  --bs-navbar-padding-x: 0;
-  --bs-navbar-padding-y: 0rem;}
-.navbar-brand .img{
-    position: relative;
-    width: 5px;
-  }
-  .dow{
-    width: 50px;
-    position: relative;
-    left: 2rem;
-  }
-  .drop{
-    bottom: 0.1rem;
-    color: #ffffff;
-    position: relative;
-    right:  1rem;
-  }
-  .nav-item{
-    position: relative;
-    right:-3rem;
-  }
-/* //////////////////////////////    Header    ////////////////////////// */
-
-
-
-
-
-/* //////////////////////////////    Sec    ////////////////////////// */
-
-.span{
-       
-       margin-right: 15px;
-}
-li{
-  display: inline;
-  margin-right: 0.5rem;
-  
+.content{
+    color: darkblue;
 }
 
+body{
+    font-family: 'Kanit', sans-serif;
+    font-family: 'Noto Sans Thai', sans-serif;
+    background-color: white;
+}
 
-.ul{
-  display: flex;
-  
- 
-  padding-left: 1.5rem;
-  font-size: 16px;
-  white-space: nowrap;
+.navbar-brand{
+    color: gray;
 }
-.span{
-  color: red;
+.bg-body-tertiary {
+    background-color: white !important
 }
-.Vacc{
-  position: relative;
-  right: 1.4rem;
+.mybtn{
+    background-color: blue;
+    color: aliceblue;
 }
-.con{
-  position: relative;
-  right: 1%;
+.portfolio{
+    background-color: lightgoldenrodyellow;
 }
-.line{
-  position: relative;
-  right: 1.7rem;
-  opacity: 0.5;
-  
+.bi-pc-display-horizontal,.bi-file-earmark-text-fill,.bi-cup-fill{
+    color: cornflowerblue;
+    font-size: 80px;
 }
-.Jeff{
-  position: relative;
-  right: 3.4rem;
+.topic{
+    font-weight: bold;
 }
-.COVID-19T{
-  position: relative;
-  right: 2rem;
+.bluetopic{
+    color: cornflowerblue;
 }
-/* //////////////////////////////    Sec    ////////////////////////// */
+.figure-container {
+    display: flex;
+    gap: 20px;
+}
+.port{
+    color: aliceblue;
+    font-size: 60px;
+}
+.footer{
+    background-color: lightpink;
+    color: aliceblue;
+}
 
-
-
- /* ////////////////////////   Body  ////////////////////////////  */
-
-h4{
-  text-align: left;
-  padding-bottom:0.4rem ;
-  border-bottom: 1px solid rgb(212, 205, 205);
+.bi-house-heart{
+    font-size: 60px;
 }
-h6{
-  text-align: left;
-  padding-bottom:0.6rem ;
-  border-bottom: 1px solid rgb(212, 205, 205);
-}
-.Live{
-  color: #b31010;
-}
-.Jan{
-  text-align: left;
-  
-}
-.li{
-
-  text-align: left;
-  display: list-item;
-  text-decoration: underline;
-  color: #3c3c3c;
-   }
-   @media (max-width: 989px) {
-    h4 {
-      display: none; 
-    }
-
-    img.img-fluidf {
-      content: url('IMG6.png'); 
-    }
-  }
-  img.img-fluidf{
-    width: 80%;
-  }
